src/stylesheets/recorder.css
body {
    text-align: center;
}

.recordingTag {
    color: red;
    font-weight: bold;
    margin: 5px 0 0 0;
}

.button-margin {
    margin-left: 5px !important;
    margin-right: 5px !important;
}

.margin-h-1 {
    margin-top: 10px !important;
    margin-bottom: 10px !important;
}

.margin-bottom-1 {
    margin-bottom: 10px !important;
}

